# lib-rs

./: Cargo.toml  Justfile  README.md  docker-compose.yml  rustfmt.toml
af/: Cargo.toml
af-core/: Cargo.toml
af-core/macros/: Cargo.toml
af-core/macros/src/: lib.rs  path.rs  util.rs
af-core/proc-macros/: Cargo.toml
af-core/proc-macros/src/: attr_main.rs  prelude.rs
af-core/src/: channel.rs  derive.rs  encoding.rs  env.rs  error.rs  fail.rs  fmt.rs  fs.rs  future.rs  iter.rs  lazy.rs  lib.rs  log.rs  math.rs  path.rs  postgres.rs  prelude.rs  random.rs  run.rs  runtime.rs  stream.rs  string.rs  symbol.rs  sync.rs  task.rs  task2.rs  test.rs  thread.rs  time.rs  util.rs  uuid.rs
af-core/src/encoding/: base64.rs
af-core/src/fmt/: as_path.rs  describe.rs  indent.rs  surround.rs
af-core/src/fs/: path.rs  utils.rs  watch.rs
af-core/src/future/: buffered.rs  join.rs  noop_waker.rs  race.rs  try_future.rs
af-core/src/log/: logger.rs
af-core/src/math/: float.rs  matrix.rs  vector.rs
af-core/src/runtime/: backend.rs  logger.rs  task.rs
af-core/src/runtime/backend/: async_executor.rs  none.rs  tokio_0_2.rs
af-core/src/string/: shared.rs  symbol.rs
af-core/src/sync/: atomic.rs  atomic_cell.rs  channel.rs  semaphore.rs
af-core/src/task/: batch.rs  cancel.rs  error.rs  handle.rs  join.rs  joiner.rs  output.rs  parallel.rs  runtime.rs  try_join.rs
af-core/src/test/: context.rs  output.rs  path.rs  runner.rs
af-core/src/time/: date.rs  duration.rs  span.rs  zone.rs
af-core/src/util/: ext.rs
af-core/test/: env.rs  fmt.rs  main.rs  random.rs  task.rs  time.rs
af-lib/: Cargo.toml
af-lib/src/: atomic.rs  channel.rs  concurrency.rs  env.rs  fail.rs  failure.rs  fs.rs  future.rs  lazy.rs  lib.rs  math.rs  panic.rs  path.rs  prelude.rs  stream.rs  string.rs  sync.rs  task.rs  task2.rs  test.rs  thread.rs  time.rs  util.rs
af-lib/src/concurrency/: channel.rs  fiber.rs  future.rs  runtime.rs  scope.rs  task.rs  thread.rs
af-lib/src/fmt/: count.rs  indent.rs  surround.rs
af-lib/src/fs/: path.rs
af-lib/src/future/: try_future.rs
af-lib/src/log/: logger.rs
af-lib/src/math/: float.rs
af-lib/src/string/: shared.rs
af-lib/src/sync/: semaphore.rs
af-lib/src/task/: cancel.rs  join.rs  try_join.rs
af-lib/src/task2/: runtime.rs
af-lib/src/test/: context.rs  path.rs  runner.rs
af-lib/src/time/: date.rs  date_time.rs  duration.rs  instant.rs  time_zone.rs  timeout.rs  zone.rs
af-lib/src/util/: defer.rs  derive.rs  ext.rs  failure.rs  fmt.rs  future.rs  iter.rs  lazy.rs  log.rs  panic.rs  process.rs  random.rs  shared_str.rs  uuid.rs
af-lib/src/util/fmt/: count.rs  indent.rs  surround.rs
af-lib/src/util/log/: logger.rs
af-lib/src/util/process/: env.rs
af-lib/test/: main.rs  task.rs  thread.rs
af-macros/: Cargo.toml
af-macros/src/: fail.rs  failure.rs  lib.rs  logger.rs  path.rs  sync.rs  test.rs  util.rs
af-postgres/: Cargo.toml
af-postgres/src/: client.rs  error.rs  lib.rs  statement.rs
af-postgres/test/: main.rs
af-proc-macros/: Cargo.toml
af-proc-macros/src/: attr_async_test.rs  attr_future_boxed.rs  attr_main.rs  attr_test_main.rs  future.rs  lib.rs  prelude.rs  runtime.rs  test.rs
af-runtime/: Cargo.toml
af-runtime/src/: backend.rs  lib.rs  logger.rs  task.rs
af-runtime/src/backend/: async_executor.rs  tokio_0_2.rs
af-sentry/: Cargo.toml
af-sentry/src/: lib.rs
af-sentry/test/: main.rs
af-slack/: Cargo.toml
af-slack/src/: api.rs  block.rs  chat.rs  lib.rs
af-slack/src/block/: text.rs
af-slack/src/chat/: attachment.rs  message.rs
af-slack/test/: main.rs
af/src/: lib.rs
tests/: Cargo.toml
tests/src/: core.rs  main.rs  postgres.rs  sentry.rs
tests/src/core/: channel.rs  future.rs  math.rs  path.rs  random.rs  string.rs  task.rs  thread.rs  time.rs  util.rs
