[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A core library and async runtime for Rust applications."
edition = "2018"
name = "af-core"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[features]
logger = ["af-macros/logger", "console", "dashmap"]
runtime = ["async-executor", "easy-parallel", "num_cpus"]
runtime-tokio = ["tokio"]

[dependencies]
af-macros = { version = "0.1", path = "../af-macros" }
arrayvec = "0.5"
async-channel = "1"
async-lock = "2"
base64 = "0.13"
cfg-if = "1"
chrono = "0.4"
chrono-tz = "0.5"
derive_more = "0.99"
event-listener = "2"
futures-lite = "1"
glob = "0.3"
im = "15"
itertools = "0.10"
log = "0.4"
num-traits = "0.2"
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.11"
parse_duration = "2"
rand = "0.8"
rand_xoshiro = "0.6"
serde = "1"
uuid = { version = "0.8", features = ["serde"] }

# logger deps.

console = { version = "0.14", optional = true }
dashmap = { version = "4", optional = true }

# runtime deps.

async-executor = { version = "1", optional = true }
easy-parallel = { version = "3", optional = true }
num_cpus = { version = "1", optional = true }

# runtime-tokio deps.

tokio = { version = "0.2", optional = true, features = ["rt-threaded"] }
