[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A core library and async runtime for Rust applications."
edition = "2018"
name = "af-core"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["logger"]
logger = ["af-macros/logger", "console", "dashmap"]
test-runner = ["console", "indicatif", "logger"]
tokio1 = ["async-global-executor/tokio"]

[dependencies]
af-macros = { version = "0.1", path = "../af-macros" }
arrayvec = "0.5"
async-channel = "1"
async-lock = "2"
cfg-if = "1"
chrono = "0.4"
chrono-tz = "0.5"
derive_more = "0.99"
event-listener = "2"
fnv = "1"
futures-lite = "1"
im = "15"
itertools = "0.10"
log = "0.4"
num-traits = "0.2"
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.11"
parse_duration = "2"
pin-project = "1"
rand = "0.8"
rand_xoshiro = "0.6"
serde = "1"
signal-hook = "0.3"
thiserror = "1"
uuid = { version = "0.8", features = ["serde"] }

# logger deps.

console = { version = "0.14", optional = true }
dashmap = { version = "4", optional = true }

# runtime deps.

async-executor = "1"
async-global-executor = { version = "2", features = ["async-io"] }
async-io = "1"

# test-runner deps.

indicatif = { version = "0.15", optional = true }
