[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A core library and async runtime for Rust applications."
edition = "2018"
name = "af-lib"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[lib]

[features]
default = ["logger"]

logger = ["af-macros/logger", "dashmap"]

[dependencies]
af-macros = { version = "^0.2.0", path = "../af-macros" }
chrono = "0.4"
chrono-tz = { version = "0.5", default-features = false }
console = "0.14"
derive_more = "0.99"
event-listener = "2"
flume = "0.10"
futures-lite = "1"
log = "0.4"
num_cpus = "1"
num-traits = "0.2"
once_cell = { version = "1", features = ["parking_lot"] }
parse_duration = "2"
pin-project = "1"
rand = "0.8"
rand_xoshiro = "0.6"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
uuid = { version = "0.8", features = ["serde"] }

# logger deps

dashmap = { version = "4", optional = true }
