[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "Macros for the indigo crate."
edition = "2018"
license = "MPL-2.0"
name = "af-macros"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[features]
logger = ["af-proc-macros/logger" ]

[dependencies]
af-proc-macros = { version = "0.1.0", path = "../af-proc-macros" }
