[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A Postgres library for af-core."
edition = "2018"
name = "af-postgres"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
af-core = { version = "0.1", path = "../af-core", features = ["tokio1"] }
bytes = "1"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
