[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "Macros for the indigo crate."
edition = "2018"
license = "MPL-2.0"
name = "af-proc-macros"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[features]
default = []
dotenv = []

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
quote = "1.0"
proc-macro-error = "0.4"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
Inflector = "0.11.4"
