[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A Sentry library for af-core applications."
edition = "2018"
name = "af-sentry"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.1.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
af-core = { version = "0.2", path = "../af-core" }
sentry = "0.21"
