[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "A Sentry library for af-core applications."
edition = "2018"
name = "af-sentry"
license = "MPL-2.0"
repository = "https://gitlab.com/alexfrydl/lib-rs"
version = "0.1.2"

[package.metadata.docs.rs]
all-features = true

[lib]

[[bin]]
name = "test-sentry"
path = "test/main.rs"
required-features = ["test"]

[features]
test = ["af-core/test-runner", "structopt"]

[dependencies]
af-core = { version = "^0.1.5", path = "../af-core" }
sentry = "0.21"
structopt = { version = "0.3", optional = true }
