[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "Macros for the indigo crate."
edition = "2018"
license = "MPL-2.0"
name = "af-core-macros"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[features]
logger = ["af-core-proc-macros/logger" ]

[dependencies]
af-core-proc-macros = { version = "^0.2.0", path = "../proc-macros" }
