[package]
authors = ["Alexandra Frydl <me@alexfrydl.com>"]
description = "Macros for the indigo crate."
edition = "2018"
license = "MPL-2.0"
name = "af-core-proc-macros"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[features]
logger = []

[dependencies]
anyhow = "1"
derive_more = "0.99"
quote = "1"
proc-macro-error = "1"
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
Inflector = "0.11"
